# Breast-Cancer-Classification---SE489

./: .gitignore  Makefile  PHASE1.md  PHASE2.md  PHASE3.md  README.md  data.dvc  pyproject.toml  requirements.txt  run.py
.dvc/: config
.dvc/secrets/: service_account.json
.github/workflows/: cml.yml  docker-image.yml
.hydra/: config.yaml  hydra.yaml
breast_cancer_classification/: config.py  dataset.py  plots.py
breast_cancer_classification/conf/: config.yaml
breast_cancer_classification/modeling/: predict.py  train.py
data/: .gitignore  breast-cancer.csv.dvc
data/processed/: features.csv  labels.csv
docker/: README.md  predict.dockerfile  run.dockerfile  train.dockerfile
docs/: breast_cancer_logistic_regression.drawio  mkdocs.yml
docs/docs/: index.md
experiments/wandb/: sweep.yaml  wandb_logisitc.py
models/: logistic_regression_model.pkl  model.pkl
notebooks/: logisitc_regression.ipynb
notebooks/exploratory/: 0.1-Berkley-SVM.ipynb  0.1-Davis-KNN.ipynb  0.1-Frank-Logistic.ipynb  0.1-Runner.ipynb
profiling/: pytorch_train.py  read_dataset_cprofile.py  read_predict_cprofile.py  read_run_cprofile.py  read_train_cprofile.py
reports/profiling/: dataset.prof  dataset_profile.txt  predict.prof  predict_profile.txt  pytorch_train_trace.json  run.prof  run_profile.txt  train.prof  train_profile.txt
wandb/: latest-run
wandb/run-20250518_104347-xq2nyxy4/: run-xq2nyxy4.wandb
wandb/run-20250518_104401-fou8lg40/: run-fou8lg40.wandb
wandb/run-20250518_104417-kx204akw/: run-kx204akw.wandb
wandb/run-20250518_104427-4vtjb0v7/: run-4vtjb0v7.wandb
(+386 files in other folders)
