[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "beast_cancer_classification"
version = "0.0.1"
description = "SE 489 project - breast cancer classification."
authors = [
  { name = "Team Python" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["breast_cancer_classification"]
include = ["pyproject.toml", "breast_cancer_classification/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["breast_cancer_classification"]
force-sort-within-sections = true

