[project]
name = "breast_cancer_classification"
version = "0.0.1"
description = "SE 489 project - breast cancer classification."
authors = [
  { name = "Team Python" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.11",
    
]
requires-python = ">=3.11.0"


[tool.ruff]
line-length = 99
src = ["breast_cancer_classification"]
include = ["pyproject.toml", "breast_cancer_classification/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["breast_cancer_classification"]
force-sort-within-sections = true

